--- a/frontend/src/app/game/styles.css
+++ b/frontend/src/app/game/styles.css
@@ -1,3 +1,14 @@
+.container {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	height: 200px;
+	margin-top: -100px; /* half of you height */
+	width: 800px;
+	margin-left: -400px; /* half of you width */
+	/* margin-right: -100px; */
+}
+
 .card {
 	background-color: #fff;
 	border-radius: 10px;
