--- a/frontend/src/app/game/simple/SimpleModeTranslations.module.css
+++ b/frontend/src/app/game/simple/SimpleModeTranslations.module.css
@@ -10,6 +10,7 @@
   transition: transform 1s ease, opacity 0.5s ease;
 }
 
+
 .pageTitle.top {
   opacity: 0;
   transform: translateY(-100%);
@@ -20,16 +21,28 @@
 .localCard {
   opacity: 0;
   transform: translateX(-100%);
-  transition: transform 0.8s ease;
+  transition: transform 0.8s ease, box-shadow 1.5s;
 }
 
 .localCard.mounted {
   opacity: 1;
   transform: translateX(0);
-  transition: transform 1s ease, opacity 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 1s;
+}
+
+.localCard.mounted:hover{
+  transform: scale(1.12);
+  box-shadow: 0 0 20px greenyellow;
 }
 
 .localCard.left {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: transform 1s ease, opacity 0.5s ease;
+
+}
+
+.localCard:hover.left {
   opacity: 0;
   transform: translateX(-100%);
   transition: transform 1s ease, opacity 0.5s ease;
@@ -41,13 +54,25 @@
   transition: transform 0.8s ease;
 }
 
+
 .onlineCard.mounted {
   opacity: 1;
   transform: translateX(0);
-  transition: transform 1s ease, opacity 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 1s;
+}
+
+.onlineCard.mounted:hover{
+  transform: scale(1.12);
+  box-shadow: 0 0 20px rgb(43, 71, 129);
 }
 
 .onlineCard.right {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform 1s ease, opacity 0.5s ease;
+}
+
+.onlineCard:hover.right {
   opacity: 0;
   transform: translateX(100%);
   transition: transform 1s ease, opacity 0.5s ease;
