--- a/frontend/src/app/game/simple/SimpleModeTranslations.module.css
+++ b/frontend/src/app/game/simple/SimpleModeTranslations.module.css
@@ -27,12 +27,15 @@
 .localCard.mounted {
   opacity: 1;
   transform: translateX(0);
-  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 1s;
+  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 0.5s;
 }
 
-.localCard.mounted:hover{
+.localCard.mounted:hover {
   transform: scale(1.12);
-  box-shadow: 0 0 20px greenyellow;
+  box-shadow:
+    0px 0px 7px rgba(0, 0, 0, 0.5),
+    0px 7px 7px rgba(0, 0, 0, 0.5),
+    0 0 20px greenyellow;
 }
 
 .localCard.left {
@@ -48,7 +51,7 @@
   transition: transform 1s ease, opacity 0.5s ease;
 }
 
-.onlineCard{
+.onlineCard {
   opacity: 0;
   transform: translateX(100%);
   transition: transform 0.8s ease;
@@ -58,12 +61,15 @@
 .onlineCard.mounted {
   opacity: 1;
   transform: translateX(0);
-  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 1s;
+  transition: transform 0.5s ease, opacity 0.5s ease, box-shadow 0.5s;
 }
 
-.onlineCard.mounted:hover{
+.onlineCard.mounted:hover {
   transform: scale(1.12);
-  box-shadow: 0 0 20px rgb(43, 71, 129);
+  box-shadow:
+    -7px 0px 7px rgba(0, 0, 0, 0.5),
+    0px 7px 7px rgba(0, 0, 0, 0.5),
+    0 0 20px rgb(43, 71, 129);
 }
 
 .onlineCard.right {
