--- a/frontend/src/components/ui/dashboard/styles.css
+++ b/frontend/src/components/ui/dashboard/styles.css
@@ -18,8 +18,7 @@
 
 canvas {
 	width: 100%;
-	max-width: 48%;
-	/* Adjust depending on how many charts are side by side */
+	max-width: 500px;
 	height: auto;
 	box-sizing: border-box;
 }
@@ -62,10 +61,8 @@ body {
 	display: block;
 	padding: 30px 20px;
 	background-color: #121212;
-
-	overflow: hidden;
-
 	position: relative;
+	overflow: hidden;
 }
 
 .match_item_link:hover,
@@ -94,6 +91,29 @@ body {
 	position: relative;
 }
 
+.match_item_game_mode {
+	/* font-weight: bold; */
+	font-size: 20px;
+	color: #FFF;
+	position: absolute;
+	top: 20px;
+	right: 30px;
+	z-index: 2;
+	opacity: 0;
+	/* Initially hidden */
+	visibility: hidden;
+	/* Prevents interaction when hidden */
+	transition: opacity 0.2s ease, visibility 0.2s ease;
+	/* Smooth transition */
+}
+
+.match_item_link:hover .match_item_game_mode {
+	opacity: 1;
+	/* Show when hovered */
+	visibility: visible;
+	/* Make it interactable when visible */
+}
+
 .match_item_date-box {
 	font-size: 24px;
 	color: #FFF;
@@ -115,33 +135,34 @@ body {
 	height: 128px;
 	width: 128px;
 	background-color: #f9b234;
-
 	z-index: 1;
 	position: absolute;
 	top: -75px;
 	right: -75px;
-
 	border-radius: 50%;
-
-	-webkit-transition: all .5s ease;
-	-o-transition: all .5s ease;
 	transition: all .5s ease;
 }
 
+.match_item_title,
+.match_item_date-box {
+	position: relative;
+	z-index: 2;
+	/* Ensure these are above the background */
+}
 
-.local .match_item_bg {
+.Local .match_item_bg {
 	background-color: #f9b234;
 }
 
-.ai .match_item_bg {
+.AI .match_item_bg {
 	background-color: #02cde4;
 }
 
-.online .match_item_bg {
+.Online .match_item_bg {
 	background-color: #3ecd5e;
 }
 
-.tournament .match_item_bg {
+.Tournament .match_item_bg {
 	background-color: #e44002;
 }
 
