game modes chart color update

--- a/frontend/src/components/ui/dashboard/styles.css
+++ b/frontend/src/components/ui/dashboard/styles.css
@@ -151,19 +151,19 @@ body {
 }
 
 .Local .match_item_bg {
-	background-color: #f9b234;
+	background-color: #32d74b;
 }
 
 .AI .match_item_bg {
-	background-color: #02cde4;
+	background-color: #0a84ff;
 }
 
 .Online .match_item_bg {
-	background-color: #3ecd5e;
+	background-color: #ff9f0a;
 }
 
 .Tournament .match_item_bg {
-	background-color: #e44002;
+	background-color: #ff453a;
 }
 
 
