--- a/frontend/src/components/ui/dashboard/styles.css
+++ b/frontend/src/components/ui/dashboard/styles.css
@@ -159,7 +159,7 @@ body {
 }
 
 .Online .match_item_bg {
-	background-color: #ff9f0a;
+	background-color: #ffbe0a;
 }
 
 .Tournament .match_item_bg {
