--- a/frontend/src/components/Tournament/styles.css
+++ b/frontend/src/components/Tournament/styles.css
@@ -18,3 +18,24 @@
   pointer-events: none;
   opacity: 0.3;
 }
+
+.video-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.background-video {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* transform: translate(-50%, -50%); */
+  z-index: -1;
+}
